--- a/HealthCare/index.html
+++ b/HealthCare/index.html
@@ -5,69 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <title>HealthCare Website</title>
 </head>
 
 <body>
     <div class="grid">
-        <section id="header">
-            <div class="grid grid-cols-[60%_1fr_1fr]">
+        <section id="header" class="max-sm:px-[10%]">
+            <div class="grid grid-cols-[2fr_1fr_1fr] text-xs max-md:grid-cols-1 max-lg:grid-cols-2">
                 <div class="flex">
-                    <img src="location.svg" alt="">
+                    <img class="w-3 h-3" src="location.svg" alt="">
                     <p>9470 Riverview, Zion 60099</p>
                 </div>
                 <div class="flex">
-                    <img src="email.svg" alt="">
+                    <img class="w-3 h-3" src="email.svg" alt="">
                     <p>medicust@gmail.com</p>
                 </div>
                 <div class="flex">
-                    <img src="headphone.svg" alt="">
+                    <img class="w-3 h-3" src="headphone.svg" alt="">
                     <p>+88 564 867 4687</p>
                 </div>
             </div>
         </section>
-        <section id="header" class="bg-[#0088FF] p-12">
-            <div class="flex gap-30 bg-[#0088FF] text-white">
-                <div class="flex gap-5">
-                    <img class="w-6 h-6" src="love.png" alt="">
-                    <p>Medicust</p>
+        <section class="p-0 z-2 bg-[#0088FF]">
+            <div class="flex justify-between text-white items-center">
+                <div class="py-2.5 pl-[20%] max-sm:pl-[10%] flex flex-1 items-center">
+                    <div class="flex gap-3">
+                        <img class="w-6 h-6" src="love.png" alt="">
+                        <p>Medicust</p>
+                    </div>
+                    <div class="flex justify-evenly flex-1 text-xs max-md:hidden">
+                        <div>Home</div>
+                        <div>About</div>
+                        <div>Department</div>
+                        <div>Pages</div>
+                        <div>Blog</div>
+                        <div>Contact</div>
+                    </div>
                 </div>
-                <div class="flex">
-                    <div>Home</div>
-                    <div>About</div>
-                    <div>Department</div>
-                    <div>Pages</div>
-                    <div>Blog</div>
-                    <div>Contact</div>
+                <div class="py-2.5 bg-[#0A2E72] pl-5 pr-[20%] max-md:hidden">
+                    <button class="text-xs">Get Appointment</button>
                 </div>
-                <div class="bg-[#0A2E72]">
-                    <button>Get Appointment</button>
+                <div class="hidden max-md:block pr-[20%] max-sm:pr-[10%]">
+                    <span class="material-symbols-outlined">menu</span>
                 </div>
             </div>
         </section>
-        <section id="bgimg" class="h-[80vh] bg-[url(imagehome.png)] bg-cover bg-size-[100%_80vh]">
-            <div class="">
-                <p class="mb-3">Medical And Health</p>
-                <h1 class="mb-3">A professional</h1>
+        <section id="bgimg" class="h-[80vh] bg-[url(imagehome.png)] bg-cover bg-size-[100%_80vh] z-1">
+            <div class="max-md:text-lg max-sm:text-xs">
+                <p class="mb-2">Medical And Health</p>
+                <h1>A professional</h1>
                 <h1>and friendly care</h1>
                 <h1>provider.</h1>
-                <p class="mb-4">Excepteur sint occaecat cupidatat non proident sunt officia</p>
+                <p class="mb-4 max-sm:w-20">Excepteur sint occaecat cupidatat non proident sunt officia</p>
                 <button>All Doctors <span><img src="" alt=""></span></button>
             </div>
         </section>
-        <section class="grid items-center justify-center">
+        <section class="grid items-center justify-center py-10 max-sm:px-[10%]">
             <div class="text-[#0A2E72]">
                 <p>Need a doctor for checkup?</p>
                 <p>Call for an emergency services!</p>
             </div>
         </section>
-        <section class="bg-[#F8F8F8]">
+        <section class="bg-[#F8F8F8] !py-10 max-sm:px-[10%]">
             <div class="grid gap-20 text-center ">
                 <div>
                     <h2>Our All Department</h2>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiat sunt culpa officia deserunt mollit anim est laborum.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiatsunt culpa
+                        officia deserunt mollit anim est laborum.</p>
                 </div>
-                <div id="first-grid" class="grid grid-cols-4 items-center">
+                <div id="first-grid" class="grid grid-cols-4 items-center max-md:grid-cols-2">
                     <div>
                         <div>
                             <img src="Icon (1).svg" alt="">
@@ -117,14 +130,14 @@
                         <div>Neurology</div>
                     </div>
                 </div>
-                <div id="patient-section" class="relative bg-blue-400">
-                    <div class="grid grid-cols-2 items-center">
+                <div id="patient-section" class="relative bg-[#0A2E72] text-white">
+                    <div class="grid grid-cols-2 items-center max-md:grid-cols-1">
                         <div>
-                        <p>Manage your health care</p>
-                        <h3>Trust us to be there.</h3>
-                        <h3>to help all and make</h3>
-                        <h3>things weel again.</h3>
-                        <button>All Doctors</button>
+                            <p>Manage your health care</p>
+                            <h3>Trust us to be there.</h3>
+                            <h3>to help all and make</h3>
+                            <h3>things weel again.</h3>
+                            <button>All Doctors</button>
                         </div>
                         <div>
                             <img src="bg.png" alt="">
@@ -138,9 +151,10 @@
                 </div>
                 <div>
                     <h2>Professional Care Provider</h2>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiat sunt culpa officia deserunt mollit anim est laborum.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiatsunt culpa
+                        officia deserunt mollit anim est laborum.</p>
                 </div>
-                <div class="grid grid-cols-4">
+                <div class="grid grid-cols-4 max-sm:grid-cols-2">
                     <div>
                         <img src="1.png" alt="">
                     </div>
@@ -168,32 +182,35 @@
                 </div>
             </div>
         </section>
-        <section id="challenge" class="bg-[url(21.svg)]">
-            <div class="grid grid-cols-[1fr_1.5fr] gap-18 leading-10">
+        <section id="challenge" class="bg-[url(21.svg)] max-sm:px-[10%]">
+            <div class="grid grid-cols-[1fr_1.5fr] gap-18 leading-10 max-md:grid-cols-1">
                 <div id="white-item" class="bg-white rounded-2xl">
-                    <h3>We always ready for a challenge.</h3>
-                    <div class="flex items-center">
+                    <h3>We always readyfor a challenge.</h3>
+                    <div class="flex items-center flex-wrap">
                         <img class="w-10" src="Group 1 (1).svg" alt="">
                         <p>+00 568 467 46</p>
                     </div>
-                    <div class="flex items-center">
+                    <div class="flex items-center flex-wrap">
                         <p>medicust@gmail.com</p>
                         <img class="w-10" src="Group 1.svg" alt="">
                     </div>
                 </div>
                 <div class="text-white">
-                    <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qu nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                    <h2>Duis aute irure dolor in reprehenderitin voluptate velit esse cillum dolore eufugiat nulla
+                        pariatur.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporincididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, qu nostrudexercitation ullamco laboris
+                        nisi ut aliquip.</p>
                     <div>
                         <div class="grid grid-cols-2">
                             <div class="flex">
                                 <img src="person.svg" alt="">
                                 <div>
-                                <h4>8648+</h4>
-                                <p>Satisfied Clients</p>
+                                    <h4>8648+</h4>
+                                    <p>Satisfied Clients</p>
                                 </div>
                             </div>
-                            
+
                             <div class="flex">
                                 <img src="trophy.svg" alt="">
                                 <div>
@@ -206,13 +223,14 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="!py-10 border max-sm:px-[10%]">
             <div class="grid gap-12">
                 <div class="text-center">
                     <h2>Patient Testimonials</h2>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiat sunt culpa officia deserunt mollit anim est laborum.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiatsunt culpa
+                        officia deserunt mollit anim est laborum.</p>
                 </div>
-                <div class="grid grid-cols-3 gap-12">
+                <div class="grid grid-cols-3 gap-6 max-md:grid-cols-1">
                     <div id="carder" class="grid gap-2 bg-[#F7F7F7]">
                         <div>
                             <div class="flex justify-between">
@@ -230,34 +248,12 @@
                             </div>
                         </div>
                         <div>
-                            <h5>Duis aute irure dolor in reprehe voluptate velit esse cillum dolo sunt culpa officia.</h5>
+                            <h5>Duis aute irure dolor in reprehevoluptate velit esse cillum dolosunt culpa officia.
+                            </h5>
                         </div>
                         <div>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiat sunt culpa officia deserunt mollit anim est laborum.</p>
-                        </div>
-                    </div>
-                    
-                    <div id="carder" class="grid gap-2 bg-[#F7F7F7]">
-                        <div>
-                            <div class="flex justify-between">
-                                <img src="Image.svg" alt="">
-                                <img src="Quote.svg" alt="">
-                            </div>
-                            <div class="flex justify-between">
-                                <div>
-                                    <h5>Amber Morales</h5>
-                                    <p>Product Designer</p>
-                                </div>
-                                <div>
-                                    <img src="stars.svg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <h5>Duis aute irure dolor in reprehe voluptate velit esse cillum dolo sunt culpa officia.</h5>
-                        </div>
-                        <div>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiat sunt culpa officia deserunt mollit anim est laborum.</p>
+                            <p>Duis aute irure dolor in reprehenderit involuptate velit esse cillum dolore fugiatsunt
+                                culpa officia deserunt mollit animest laborum.</p>
                         </div>
                     </div>
 
@@ -278,27 +274,117 @@
                             </div>
                         </div>
                         <div>
-                            <h5>Duis aute irure dolor in reprehe voluptate velit esse cillum dolo sunt culpa officia.</h5>
+                            <h5>Duis aute irure dolor in reprehevoluptate velit esse cillum dolosunt culpa officia.
+                            </h5>
                         </div>
                         <div>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fugiat sunt culpa officia deserunt mollit anim est laborum.</p>
+                            <p>Duis aute irure dolor in reprehenderit involuptate velit esse cillum dolore fugiatsunt
+                                culpa officia deserunt mollit animest laborum.</p>
+                        </div>
+                    </div>
+
+                    <div id="carder" class="grid gap-2 bg-[#F7F7F7]">
+                        <div>
+                            <div class="flex justify-between">
+                                <img src="Image.svg" alt="">
+                                <img src="Quote.svg" alt="">
+                            </div>
+                            <div class="flex justify-between">
+                                <div>
+                                    <h5>Amber Morales</h5>
+                                    <p>Product Designer</p>
+                                </div>
+                                <div>
+                                    <img src="stars.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <h5>Duis aute irure dolor in reprehevoluptate velit esse cillum dolosunt culpa officia.
+                            </h5>
+                        </div>
+                        <div>
+                            <p>Duis aute irure dolor in reprehenderit involuptate velit esse cillum dolore fugiatsunt
+                                culpa officia deserunt mollit animest laborum.</p>
                         </div>
                     </div>
                 </div>
-                <div id="updates" class="flex items-center text-white">
+                <div id="updates" class="flex items-center text-white flex-wrap">
                     <div>
-                        <h3>Get Every Single Updates Here.</h3>
+                        <h3>Get Every SingleUpdates Here.</h3>
                     </div>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elitsed do eiusmod tempor incididunt ut
+                        labore et doloremagna aliqua. Ut enim ad minim veniam</div>
                     <div class="flex">
                         <img class="w-[60%]" src="1.svg" alt="">
                         <img class="w-[60%]" src="2.svg" alt="">
                     </div>
                 </div>
+                <div class="grid grid-cols-2 max-md:grid-cols-1">
+                    <div class="relative">
+                        <img src="bg (4).png" alt="">
+                        <div
+                            class="absolute right-0.5 top-0.5 !px-6 !py-6 rounded-[10px] w-[45%] h-[98%] bg-white leading-8 overflow-hidden">
+                            <p class="text-[#5E6F8E]">25, February, 2019</p>
+                            <h2 class="!text-lg">If you find yourself constantly bookmarking and healthsections.</h2>
+                            <a class="text-[#0088FF]" href="">Read more</a>
+                            <p class="text-[#5E6F8E]">5 hours ago</p>
+                        </div>
+                    </div>
+                    <div class="relative">
+                        <img src="bg (5).png" alt="">
+                        <div
+                            class="absolute right-0.5 top-0.5 !px-6 !py-6 rounded-[10px] w-[45%] h-[98%] bg-white leading-8 overflow-hidden">
+                            <p class="text-[#5E6F8E]">25, February, 2019</p>
+                            <h2 class="!text-lg">If you find yourself constantly bookmarking and healthsections.</h2>
+                            <a class="text-[#0088FF]" href="">Read more</a>
+                            <p class="text-[#5E6F8E]">5 hours ago</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-        <section></section>
-        <section></section>
+        <section class="bg-[url(footer.png)] !py-26">
+            <div class="flex gap-20 text-white max-md:flex-col">
+                <div>
+                    <div class="flex gap-5">
+                        <img class="w-6 h-6 bg-amber-400" src="love.png" alt="">
+                        <p>Medicust</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetursed do eiusmod tempor incididunt ut magna aliqua.</p>
+                    <img src="Social.svg" alt="">
+                </div>
+                <div>
+                    <h4>Departments</h4>
+                    <p>Family Medicine</p>
+                    <p>Women's Health</p>
+                    <p>Optician</p>
+                    <p>Pediatrics</p>
+                    <p>Dermatology</p>
+                </div>
+                <div>
+                    <h4>Quick Links</h4>
+                    <p>Our Doctors</p>
+                    <p>Appointment</p>
+                    <p>Blog Post</p>
+                    <p>Shop Product</p>
+                    <p>Contact Us</p>
+                </div>
+                <div>
+                    <h4>Blog Post</h4>
+                    <p class="text-amber-300">22.05.2019</p>
+                    <p>Excepteur sint occaecatcupidatat non proident,sunt in culpa.</p>
+                    <p class="text-amber-300">22.05.2019</p>
+                    <p>Excepteur sint occaecatcupidatat non proident,sunt in culpa.</p>
+                </div>
+            </div>
+        </section>
+        <section class="bg-[#0A2E72]">
+            <div class="flex gap-10 justify-center text-white">
+                <div>Copyright 2019</div>
+                <div>All Rights Reserved</div>
+            </div>
+        </section>
     </div>
 </body>
 
