Adjust header padding to match design

--- a/HealthCare/index.html
+++ b/HealthCare/index.html
@@ -23,11 +23,11 @@
                     <img class="w-3 h-3" src="location.svg" alt="">
                     <p>9470 Riverview, Zion 60099</p>
                 </div>
-                <div class="flex">
+                <div class="flex justify-self-end max-md:justify-self-start">
                     <img class="w-3 h-3" src="email.svg" alt="">
                     <p>medicust@gmail.com</p>
                 </div>
-                <div class="flex">
+                <div class="flex justify-self-end max-lg:justify-self-start">
                     <img class="w-3 h-3" src="headphone.svg" alt="">
                     <p>+88 564 867 4687</p>
                 </div>
