corrected image path to display properly

--- a/HealthCare/index.html
+++ b/HealthCare/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </section>
-        <section id="bgimg" class="h-[80vh] bg-[url(imagehome.png)] bg-cover bg-size-[100%_80vh] z-1">
+        <section id="bgimg" class="h-[80vh] bg-[url(Imagehome.png)] bg-cover bg-size-[100%_80vh] z-1">
             <div class="max-md:text-lg max-sm:text-xs">
                 <p class="mb-2">Medical And Health</p>
                 <h1>A professional</h1>
